--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(lambda lambda.cpp)
 add_executable(date_test date_test.cpp date.h date.cpp)
 add_executable(accumulator accumulator.cpp)
+add_executable(accumulator2 accumulator2.cpp)
