--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(lambda lambda.cpp)
 add_executable(date_test date_test.cpp date.h date.cpp)
 add_executable(accumulator accumulator.cpp)
 add_executable(accumulator2 accumulator2.cpp)
+add_executable(decltype decltype.cpp)
