Example with sieve of Eratosthenes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(date_test date_test.cpp date.h date.cpp)
 add_executable(accumulator accumulator.cpp)
 add_executable(accumulator2 accumulator2.cpp)
 add_executable(decltype decltype.cpp)
+add_executable(sieve sieve.cpp)
