--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(accumulator accumulator.cpp)
 add_executable(accumulator2 accumulator2.cpp)
 add_executable(decltype decltype.cpp)
 add_executable(sieve sieve.cpp)
+add_executable(forward forward.cpp)
