Example with std::forward

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(accumulator2 accumulator2.cpp)
 add_executable(decltype decltype.cpp)
 add_executable(sieve sieve.cpp)
 add_executable(forward forward.cpp)
+add_executable(move move.cpp)
