Added example with memory order, will try to test on non-Intel CPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(decltype decltype.cpp)
 add_executable(sieve sieve.cpp)
 add_executable(forward forward.cpp)
 add_executable(move move.cpp)
+add_executable(memory_order memory_order.cpp)
