Added comparison of assembly code with/without compile time barrier and volatile modifier on macOS High Sierra Apple LLVM version 10.0.0 (clang-1000.11.45.2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 PROJECT(cpp-learning)
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 add_executable(lambda lambda.cpp)
 add_executable(date_test date_test.cpp date.h date.cpp)
 add_executable(accumulator accumulator.cpp)
@@ -11,3 +12,4 @@ add_executable(sieve sieve.cpp)
 add_executable(forward forward.cpp)
 add_executable(move move.cpp)
 add_executable(memory_order memory_order.cpp)
+add_executable(memory_order_intel memory_order_intel.cpp)
