No difference between consume / acquire memory order on Intel x86_64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(forward forward.cpp)
 add_executable(move move.cpp)
 add_executable(memory_order memory_order.cpp)
 add_executable(memory_order_intel memory_order_intel.cpp)
+add_executable(memory_barrier_intel memory_barrier_intel.cpp)
