Added examples with inline assembly and pure assembly functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,6 @@ add_executable(move move.cpp)
 add_executable(memory_order memory_order.cpp)
 add_executable(memory_order_intel memory_order_intel.cpp)
 add_executable(memory_barrier_intel memory_barrier_intel.cpp)
+add_executable(intel_asm_operations intel_asm_operations.cpp)
+add_executable(cpp_with_asm cpp_with_asm.cpp)
+target_compile_options(cpp_with_asm PUBLIC "-m64")
