--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_executable(memory_order_intel memory_order_intel.cpp)
 add_executable(memory_barrier_intel memory_barrier_intel.cpp)
 add_executable(intel_asm_operations intel_asm_operations.cpp)
 add_executable(cpu_info cpu_info.cpp)
+add_executable(array array.h array.cpp)
