Added example with setjmp/longjmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_executable(memory_barrier_intel memory_barrier_intel.cpp)
 add_executable(intel_asm_operations intel_asm_operations.cpp)
 add_executable(cpu_info cpu_info.cpp)
 add_executable(array array.h array.cpp)
+add_executable(setjmp_longjmp setjmp_longjmp.cpp)
