Added example with usage of RAII to wait for a thread to complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0)
 PROJECT(cpp-learning)
 set(CMAKE_CXX_STANDARD 11)
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -pthread")
 endif()
 
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
@@ -24,3 +24,4 @@ add_executable(intel_asm_operations intel_asm_operations.cpp)
 add_executable(cpu_info cpu_info.cpp)
 add_executable(array array.h array.cpp)
 add_executable(setjmp_longjmp setjmp_longjmp.cpp)
+add_executable(thread_guard thread_guard.cpp)
