Added not my example of TSX usage, not tested yet (maybe later)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_executable(cpu_info cpu_info.cpp)
 add_executable(array array.h array.cpp)
 add_executable(setjmp_longjmp setjmp_longjmp.cpp)
 add_executable(thread_guard thread_guard.cpp)
+add_executable(transactional_memory transactional_memory.cpp)
