--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_executable(array array.h array.cpp)
 add_executable(setjmp_longjmp setjmp_longjmp.cpp)
 add_executable(thread_guard thread_guard.cpp)
 add_executable(transactional_memory transactional_memory.cpp)
+add_executable(mutex mutex.cpp)
