--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_executable(setjmp_longjmp setjmp_longjmp.cpp)
 add_executable(thread_guard thread_guard.cpp)
 add_executable(transactional_memory transactional_memory.cpp)
 add_executable(mutex mutex.cpp)
+add_executable(accumulate accumulate.cpp)
