--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(thread_guard thread_guard.cpp)
 add_executable(transactional_memory transactional_memory.cpp)
 add_executable(mutex mutex.cpp)
 add_executable(accumulate accumulate.cpp)
+add_executable(account_thread_safe account_thread_safe.cpp)
