Added example with RTM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,9 @@ cmake_minimum_required(VERSION 3.0)
 
 PROJECT(cpp-learning)
 set(CMAKE_CXX_STANDARD 11)
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -pthread")
-endif()
-
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "AppleClang")
+    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -pthread -mrtm")
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(CMAKE_CXX_FLAGS /O2 /FA)
 endif()
 add_executable(lambda lambda.cpp)
@@ -29,3 +27,4 @@ add_executable(transactional_memory transactional_memory.cpp)
 add_executable(mutex mutex.cpp)
 add_executable(accumulate accumulate.cpp)
 add_executable(account_thread_safe account_thread_safe.cpp)
+add_executable(tsx_test tsx_test.cpp)
