--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(mutex mutex.cpp)
 add_executable(accumulate accumulate.cpp)
 add_executable(account_thread_safe account_thread_safe.cpp)
 add_executable(tsx_test tsx_test.cpp)
+add_executable(condition_variable condition_variable.cpp)
