Added example with thread-safe queue with two consuming threads and one producing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_executable(accumulate accumulate.cpp)
 add_executable(account_thread_safe account_thread_safe.cpp)
 add_executable(tsx_test tsx_test.cpp)
 add_executable(condition_variable condition_variable.cpp)
+add_executable(threadsafe_queue threadsafe_queue_test.h threadsafe_queue_test.cpp)
