--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_executable(tsx_test tsx_test.cpp)
 add_executable(condition_variable condition_variable.cpp)
 add_executable(threadsafe_queue threadsafe_queue_test.h threadsafe_queue_test.cpp)
 add_executable(future future.cpp)
+add_executable(promise promise.cpp)
