Added two examples: 1. Example barrier_not_working shows that there are not guarantees about operation order if you make stores from different threads. 2. Example fence_with_relaxed show that it is possible to guarantee memory ordering between threads using atomic_thread_fence even if variables themselves are atomic with memory_order_relaxed load/stores or even nonatomic at all.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,5 @@ add_executable(threadsafe_queue threadsafe_queue_test.h threadsafe_queue_test.cp
 add_executable(future future.cpp)
 add_executable(promise promise.cpp)
 add_executable(shared_future shared_future.cpp)
+add_executable(barrier_not_working barrier_not_working.cpp)
+add_executable(fence_with_relaxed fence_with_relaxed.cpp)
