Added example of naive and simple implementation of thread-safe stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ add_executable(promise promise.cpp)
 add_executable(shared_future shared_future.cpp)
 add_executable(barrier_not_working barrier_not_working.cpp)
 add_executable(fence_with_relaxed fence_with_relaxed.cpp)
+add_executable(threadsafe_stack threadsafe_stack.cpp)
