Added example of lock-free stack for x86_64 (using CMPXCHG16B instruction)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,4 @@ add_executable(shared_future shared_future.cpp)
 add_executable(barrier_not_working barrier_not_working.cpp)
 add_executable(fence_with_relaxed fence_with_relaxed.cpp)
 add_executable(threadsafe_stack threadsafe_stack.cpp)
+add_executable(lock_free_stack lock_free_stack.cpp)
