Now lock-free stack is working properly. Later I'll comment everything.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0)
 PROJECT(cpp-learning)
 set(CMAKE_CXX_STANDARD 11)
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "AppleClang")
-    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -pthread -mrtm")
+    set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -stdlib=libc++ -Wall -Wextra -pthread -mrtm")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(CMAKE_CXX_FLAGS /O2 /FA)
 endif()
@@ -38,3 +38,4 @@ add_executable(fence_with_relaxed fence_with_relaxed.cpp)
 add_executable(threadsafe_stack threadsafe_stack.cpp)
 add_executable(threadsafe_queue_tuned threadsafe_queue_tuned.h threadsafe_queue_tuned.cpp)
 add_executable(lock_free_stack lock_free_stack.cpp)
+add_executable(lock_free_test lock_free_test.cpp)
