Added example of fine-grained list with iterator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,4 @@ add_executable(threadsafe_stack threadsafe_stack.cpp)
 add_executable(threadsafe_queue_tuned threadsafe_queue_tuned.h threadsafe_queue_tuned.cpp)
 add_executable(lock_free_stack lock_free_stack.cpp)
 add_executable(lock_free_test lock_free_test.cpp)
+add_executable(threadsafe_list_iterator threadsafe_list_iterator.cpp)
