Added my first attempt to implement lock-free queue based on code in C++ Concurrency in Action The problem is that example from book doesn't work and I can not find working implementation anywhere I'll try to fix it myself later

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,4 @@ add_executable(threadsafe_queue_tuned threadsafe_queue_tuned.h threadsafe_queue_
 add_executable(lock_free_stack lock_free_stack.cpp)
 add_executable(lock_free_test lock_free_test.cpp)
 add_executable(threadsafe_list_iterator threadsafe_list_iterator.cpp)
+add_executable(lock_free_queue lock_free_queue.cpp)
