--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.0)
 
 PROJECT(cpp-learning)
 set(CMAKE_CXX_STANDARD 11)
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "AppleClang")
+
+if (${CMAKE_CXX_COMPILER_ID} STREQUAL "AppleClang")
     set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -stdlib=libc++ -Wall -Wextra -pthread -mrtm")
+elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "-O3 -stdlib=libc++ -march=native -Wall -Wextra -pthread")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(CMAKE_CXX_FLAGS /O2 /FA)
 endif()
+
 add_executable(lambda lambda.cpp)
 add_executable(date_test date_test.cpp date.h date.cpp)
 add_executable(accumulator accumulator.cpp)
@@ -19,7 +23,9 @@ add_executable(memory_order memory_order.cpp)
 add_executable(memory_order_intel memory_order_intel.cpp)
 add_executable(memory_barrier_intel memory_barrier_intel.cpp)
 add_executable(intel_asm_operations intel_asm_operations.cpp)
-add_executable(cpu_info cpu_info.cpp)
+if (${CMAKE_CXX_COMPILER_ID} STREQUAL "AppleClang")
+    add_executable(cpu_info cpu_info.cpp)
+endif()
 add_executable(array array.h array.cpp)
 add_executable(setjmp_longjmp setjmp_longjmp.cpp)
 add_executable(thread_guard thread_guard.cpp)
