--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,11 @@ add_executable(lock_free_test lock_free_test.cpp)
 add_executable(threadsafe_list_iterator threadsafe_list_iterator.cpp)
 add_executable(lock_free_queue lock_free_queue.cpp)
 add_executable(equality_overloading equality_overloading.cpp)
+add_executable(exchange_pointers exchange_pointers.cpp)
+add_executable(memory_allocation memory_allocation.cpp)
 
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     include_directories("${PROJECT_SOURCE_DIR}/vld/include")
     target_link_libraries(lock_free_queue "${PROJECT_SOURCE_DIR}/vld/lib/Win64/vld.lib")
 endif()
 
-add_executable(exchange_pointers exchange_pointers.cpp)
